<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_log_medicine_quantity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/paleGreen"
    tools:context=".EditMedicineFragment">

    <Button
        android:id="@+id/save_medicine"
        style="@android:style/Widget.Material.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_save_button"
        android:textColor="#1B5E20"
        android:textSize="13sp"
...
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/label_regular_quantity"
        android:textColor="#B2000000"
        app:layout_constraintBottom_toBottomOf="@+id/input_regular_quantity"
        app:layout_constraintEnd_toStartOf="@+id/guideline" />

    <EditText
        android:id="@+id/input_medicine_name"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/place_holder_medicine_name"
...
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/label_adjust_quantity"
        android:textColor="#B2000000"
        app:layout_constraintBottom_toBottomOf="@+id/input_adjustment_step"
        app:layout_constraintEnd_toStartOf="@+id/guideline" />

    <EditText
        android:id="@+id/input_regular_quantity"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
...
